# shortcut-python-client

./: .env  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  shortcut.openapi.json
.github/workflows/: ci.yml
shortcut_python_client/: __init__.py  cli.py  client.py  main.py  models.py
tests/: test_cli.py  test_main.py
