[project]
name = "shortcut-python-client"
version = "0.1.0"
description = "Python client for https://shortcut.com to interact with their API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

authors = [
    { name = "Matthieu B. <matthieu@mabong.co>" },
]


[project.scripts]
shortcut = "shortcut_python_client.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
